# sticker_processing_tool

./: .gitignore  README.md  pyproject.toml  start.sh
backend/: main.py
backend/api/: server.py
backend/api/routers/: sticker.py
backend/api/schemas/: sticker.py
backend/sticker/: __init__.py  sticker_birefnet.py  sticker_generator.py
frontend/: vite.config.js
frontend/src/: App.vue  style.css
frontend/src/api/: sticker.js
frontend/src/components/: DownloadBar.vue  FileUpload.vue  ParamPanel.vue  PreviewArea.vue
sticker/: sticker-1.py  sticker-BiRefNet.py  sticker-Rembg.py
